Fix FAQ alignment

--- a/component-library/components/frequently-asked-questions/frequently-asked-questions.scss
+++ b/component-library/components/frequently-asked-questions/frequently-asked-questions.scss
@@ -1,36 +1,34 @@
 .c-frequently-asked-questions {
-	&__inner-wrapper {
-		padding: var(--component-padding) 0;
-	}
-	
-	&__items {
-		display: flex;
-		flex-flow: row wrap;
-		justify-content: center;
-		align-items: center;
-	}
+  &__inner-wrapper {
+    padding: var(--component-padding) 0;
+  }
 
-	&__heading {
-		margin-bottom: 30px;
-		text-align: center;
-	}
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 
-	&__question {
-		flex: 1 var(--s-350-390);
-		padding: 25px;
+  &__heading {
+    margin-bottom: 30px;
+    text-align: center;
+  }
 
-		dt {
-			margin: 0 0 5px 0;
-			font-weight: 600;
-			font-size: 1.7em;
-			color: var(--text-color);
-		}
+  &__question {
+    flex: 1 var(--s-350-390);
+    padding: 25px;
 
-		dd {
-			margin: 0;
-			padding: 0;
-			font-size: 1.6em;
-			font-weight: 400;
-		}
-	}
+    dt {
+      margin: 0 0 5px 0;
+      font-weight: 600;
+      font-size: 1.7em;
+      color: var(--text-color);
+    }
+
+    dd {
+      margin: 0;
+      padding: 0;
+      font-size: 1.6em;
+      font-weight: 400;
+    }
+  }
 }
